stuck linking .js file and out of ideas, need help asap!

--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 <h2>Press any key to start playing!</h2>
 
 <body>
-    <p></p>
+    Guess the word! _ _ _ _ _ _
     <ol>
         Letters Already Guessed:
-        <ul>
-            # of Guesses Remaining:
-        </ul>
+        <ul># of Guesses Remaining: </ul>
     </ol>
-    <p>wins:
+    <p>
+        <table style="width: 50%">
+            <tr>
+                <th>Wins</th>
+                <th>:</th>
+            </tr>
+            <tr>
+                <td>Losses</td>
+                <td>:</td>
+            </tr>
+        </table>
     </p>
-    <div>losses:</div>
-
 </body>
 <footer>
 
@@ -33,3 +39,4 @@
 </footer>
 
 </html>
+<script src="./assets/javascript/game.js"></script>
